force-app/main/default/objects/CLQ_Inspection__c/fields/CLQ_Recommended_Inspection_Tool__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Recommended_Inspection_Tool__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recommended Inspection Tool</label>
    <referenceTo>CLQ_Inspection_Tools__c</referenceTo>
    <relationshipLabel>Inspections (Recommended Inspection Tool)</relationshipLabel>
    <relationshipName>Inspections1</relationshipName>
    <type>Lookup</type>
</CustomField>