force-app/main/default/objects/CLQ_Inspection__c/fields/CLQ_Report_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Report_Sent_Date__c</fullName>
    <label>Report Sent Date</label>
    <type>Date</type>
</CustomField>