force-app/main/default/objects/CLQ_Inspection__c/fields/CLQ_Representative_Email__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Representative_Email__c</fullName>
    <label>Representative Email</label>
    <type>Email</type>
</CustomField>