force-app/main/default/objects/CLQ_Inspection__c/fields/CLQ_Revise_Visit_Status__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Revise_Visit_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, Visit Status is set back to Scheduled if the prior status was Visit Completed</description>
    <label>Revise Visit Status</label>
    <type>Checkbox</type>
</CustomField>