force-app/main/default/objects/CLQ_Inspection__c/fields/CLQ_RSS_Feed_Date__c.field-meta.xml
<CustomField>
    <fullName>CLQ_RSS_Feed_Date__c</fullName>
    <label>RSS Feed Date</label>
    <type>Date</type>
</CustomField>