force-app/main/default/objects/CLQ_Inspection__c/fields/CLQ_Scope__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Scope__c</fullName>
    <label>Scope</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CLQ_Inspection_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Full</fullName>
            </value>
            <value>
                <fullName>Focused</fullName>
            </value>
            <value>
                <fullName>Partial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>