force-app/main/default/objects/CLQ_Inspection__c/fields/CLQ_Send_Report_To__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Send_Report_To__c</fullName>
    <label>Send Report To</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CDC Web</fullName>
                <default>true</default>
                <label>CDC Web</label>
            </value>
            <value>
                <fullName>Portal</fullName>
            </value>
            <value>
                <fullName>CDCWeb &amp; Portal</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>