force-app/main/default/objects/CLQ_Inspection__c/fields/CLQ_Services_Offered_Day_Camp__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Services_Offered_Day_Camp__c</fullName>
    <description>Created to capture Services Offered for Application day camp</description>
    <label>Services Offered Day Camp</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Meals Provided</fullName>
            </value>
            <value>
                <fullName>Evening Care</fullName>
            </value>
            <value>
                <fullName>Swimming/Water Activities</fullName>
            </value>
            <value>
                <fullName>Transportation</fullName>
            </value>
            <value>
                <fullName>Overnight Camping</fullName>
            </value>
            <value>
                <fullName>Field Trips</fullName>
            </value>
            <value>
                <fullName>Specialized Activities</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>