force-app/main/default/objects/CLQ_Inspection__c/fields/CLQ_Services_Offered_Global__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Services_Offered_Global__c</fullName>
    <label>Services Offered</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CLQ_Services_Offered</valueSetName>
    </valueSet>
</CustomField>