force-app/main/default/objects/CLQ_Inspection__c/fields/CLQ_Site_IRN__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Site_IRN__c</fullName>
    <label>Site IRN</label>
    <length>128</length>
    <type>Text</type>
</CustomField>