force-app/main/default/objects/CLQ_Inspection__c/fields/CLQ_Snapshot_Copy__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Snapshot_Copy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Snapshot Copy</label>
    <type>Checkbox</type>
</CustomField>