force-app/main/default/objects/CLQ_Inspection__c/fields/CLQ_Specialist_Reviewer__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Specialist_Reviewer__c</fullName>
    <label>Reviewer</label>
    <length>250</length>
    <type>Text</type>
</CustomField>