force-app/main/default/objects/CLQ_Inspection__c/fields/CLQ_Staff_in_Compliance__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Staff_in_Compliance__c</fullName>
    <label>Staff in Compliance</label>
    <length>250</length>
    <type>Text</type>
</CustomField>