force-app/main/default/objects/CLQ_Inspection__c/fields/CLQ_State__c.field-meta.xml
<CustomField>
    <fullName>CLQ_State__c</fullName>
    <formula>CLQ_State_at_Site__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>State</label>
    <type>Text</type>
</CustomField>