force-app/main/default/objects/CLQ_Inspection__c/fields/CLQ_State_at_Site__c.field-meta.xml
<CustomField>
    <fullName>CLQ_State_at_Site__c</fullName>
    <label>CLQ State at Site</label>
    <length>10</length>
    <type>Text</type>
</CustomField>