force-app/main/default/objects/CLQ_Inspection__c/fields/CLQ_Street_Address_1__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Street_Address_1__c</fullName>
    <formula>CLQ_Street_Address_1_at_Site__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Street Address 1</label>
    <type>Text</type>
</CustomField>