force-app/main/default/objects/CLQ_Inspection__c/fields/CLQ_Street_Address_1_at_Site__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Street_Address_1_at_Site__c</fullName>
    <label>CLQ Street Address 1 at Site</label>
    <length>50</length>
    <type>Text</type>
</CustomField>