force-app/main/default/objects/CLQ_Inspection__c/fields/CLQ_Street_Address_2__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Street_Address_2__c</fullName>
    <formula>CLQ_Street_Address_2_at_Site__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Street Address 2</label>
    <type>Text</type>
</CustomField>