force-app/main/default/objects/CLQ_Inspection__c/fields/CLQ_Submitted_By__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Submitted_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Submitted By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Inspections</relationshipName>
    <type>Lookup</type>
</CustomField>