force-app/main/default/objects/CLQ_Inspection__c/fields/CLQ_Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Submitted_Date__c</fullName>
    <label>Submitted Date</label>
    <type>Date</type>
</CustomField>