force-app/main/default/objects/CLQ_Inspection__c/fields/CLQ_Submitted_for_Approval_Once__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Submitted_for_Approval_Once__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Back-office flag that&apos;s checked automatically when the inspection has been submitted for approval already once.

(CR with TFS ID 11235)</description>
    <label>CLQ Submitted for Approval Once</label>
    <type>Checkbox</type>
</CustomField>