force-app/main/default/objects/CLQ_Inspection__c/fields/CLQ_Supervisor_Approver__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Supervisor_Approver__c</fullName>
    <formula>Owner:User.Manager.FirstName + &apos; &apos; +  Owner:User.Manager.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supervisor/Approver</label>
    <type>Text</type>
</CustomField>