force-app/main/default/objects/CLQ_Inspection__c/fields/CLQ_TA_Description__c.field-meta.xml
<CustomField>
    <fullName>CLQ_TA_Description__c</fullName>
    <label>TA Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>