force-app/main/default/objects/CLQ_Inspection__c/fields/CLQ_Total_Duration_of_Visits__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Total_Duration_of_Visits__c</fullName>
    <label>Total Duration of Visits</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>