force-app/main/default/objects/CLQ_Inspection__c/fields/CLQ_Total_Duration_Of_Visits_HHmm_format__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Total_Duration_Of_Visits_HHmm_format__c</fullName>
    <formula>IF((MOD(CLQ_Total_Duration_of_Visits__c/60,1)*60) &gt; 10,

TEXT(FLOOR(CLQ_Total_Duration_of_Visits__c/60)) + &quot; Hours &quot; + TEXT(FLOOR(MOD(CLQ_Total_Duration_of_Visits__c/60,1)*60) ) + &quot; Minutes&quot;,
TEXT(FLOOR(CLQ_Total_Duration_of_Visits__c/60)) + &quot; Hours &quot; + TEXT(FLOOR(MOD(CLQ_Total_Duration_of_Visits__c/60,1)*60) ) + &quot; Minutes&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Duration Of Visits</label>
    <type>Text</type>
</CustomField>