force-app/main/default/objects/CLQ_Inspection__c/fields/CLQ_Total_Enrollment_School_Age__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Total_Enrollment_School_Age__c</fullName>
    <label>Total Enrollment(School Age)</label>
    <summarizedField>CLQ_Enrollment_Group__c.CLQ_Total_No_of_School_Age__c</summarizedField>
    <summaryForeignKey>CLQ_Enrollment_Group__c.CLQ_Inspection__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>