force-app/main/default/objects/CLQ_Inspection__c/fields/CLQ_Total_Risk_Points__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Total_Risk_Points__c</fullName>
    <label>Total Non-Compliance</label>
    <summarizedField>CLQ_Rules_Inspected__c.CLQ_Risk_Points__c</summarizedField>
    <summaryFilterItems>
        <field>CLQ_Rules_Inspected__c.CLQ_Result__c</field>
        <operation>equals</operation>
        <value>Non-Compliant, Substantiated</value>
    </summaryFilterItems>
    <summaryForeignKey>CLQ_Rules_Inspected__c.CLQ_Inspection_No__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>