force-app/main/default/objects/CLQ_Inspection__c/fields/CLQ_Total_Staff__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Total_Staff__c</fullName>
    <label>Total Staff</label>
    <length>250</length>
    <type>Text</type>
</CustomField>