force-app/main/default/objects/CLQ_Inspection__c/fields/CLQ_TotalEnrollment_Under_21_2_yrs_Infan__c.field-meta.xml
<CustomField>
    <fullName>CLQ_TotalEnrollment_Under_21_2_yrs_Infan__c</fullName>
    <inlineHelpText>Total Enrollment (Under 2 1/2 yrs - Infants &amp; YT)</inlineHelpText>
    <label>Total Enrollment (Under 2 1/2)</label>
    <summarizedField>CLQ_Enrollment_Group__c.CLQ_TotalEnrollment_Under_21_2_yrs_Infan__c</summarizedField>
    <summaryForeignKey>CLQ_Enrollment_Group__c.CLQ_Inspection__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>