force-app/main/default/objects/CLQ_Inspection__c/fields/CLQ_Type__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Type__c</fullName>
    <label>Inspection Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Complaint</fullName>
            </value>
            <value>
                <fullName>Full</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>