force-app/main/default/objects/CLQ_Inspection__c/fields/CLQ_Type_of_Audit__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Type_of_Audit__c</fullName>
    <label>Type of Audit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Onsite</fullName>
            </value>
            <value>
                <fullName>Desk Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>