force-app/main/default/objects/CLQ_Inspection__c/fields/CLQ_Use_Rules_Effective_On__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Use_Rules_Effective_On__c</fullName>
    <label>Use Rules Effective On</label>
    <type>Date</type>
</CustomField>