force-app/main/default/objects/CLQ_Inspection__c/fields/CLQ_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Zip_Code__c</fullName>
    <formula>CLQ_Zip_Code_at_Site__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Zip Code</label>
    <type>Text</type>
</CustomField>