force-app/main/default/objects/CLQ_Inspection__c/fields/CLQ_Zip_Code_at_Site__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Zip_Code_at_Site__c</fullName>
    <label>CLQ Zip Code at Site</label>
    <length>6</length>
    <type>Text</type>
</CustomField>