force-app/main/default/objects/CLQ_Inspection__c/fields/concurrentFlag__c.field-meta.xml
<CustomField>
    <fullName>concurrentFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to check concurrent execution</description>
    <label>concurrentFlag</label>
    <type>Checkbox</type>
</CustomField>