force-app/main/default/objects/CLQ_Inspection__c/fields/Drawloop_Next_Insp_Approved_CDCWeb__c.field-meta.xml
<CustomField>
    <fullName>Drawloop_Next_Insp_Approved_CDCWeb__c</fullName>
    <description>(Forms/Reports) Drawloop next field for Inspection Full Report for Inspection record type for CDC Web purposes (ODE &amp; JFS)
DDP: Licensing Inspection Full Report
Delivery Option: SMTP - Inspection Approved (CDC Web only)</description>
    <formula>&quot;SFCLQ_Inspection__c:&quot; &amp; Id &amp; &quot;;DDPId:a03r0000000xtEP;Deploy:a01r0000001LWSk&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DL Next Inspection Approved (CDC Web)</label>
    <type>Text</type>
</CustomField>