force-app/main/default/objects/CLQ_Inspection__c/fields/Drawloop_Next_Insp_Visit_Completed__c.field-meta.xml
<CustomField>
    <fullName>Drawloop_Next_Insp_Visit_Completed__c</fullName>
    <description>[DrawLoop]: Used in Outbound Messages 
Not in Use</description>
    <formula>IF( OR(CLQ_Program__r.RecordType.Name = &quot;FCC - Type A Home&quot;,CLQ_Program__r.RecordType.Name = &quot;FCC - Type B Home&quot;,CLQ_Program__r.RecordType.Name = &quot;Child Care Center&quot;) , &quot;SFCLQ_Inspection__c:&quot; &amp; Id &amp; &quot;;DDPId:a03r0000000nMup;Deploy:a01r0000000jc4U&quot;, IF( OR(CLQ_Program__r.RecordType.Name = &quot;Pre School&quot;,CLQ_Program__r.RecordType.Name = &quot;School Age Child Care&quot;) , &quot;SFCLQ_Inspection__c:&quot; &amp; Id &amp; &quot;;DDPId:a03r0000000nMup;Deploy:a01r0000000jc4e&quot;, &quot;&quot;) )</formula>
    <label>DEL_Drawloop_Next Insp Visit Completed</label>
    <type>Text</type>
</CustomField>