force-app/main/default/objects/CLQ_Inspection__c/fields/Drawloop_Next_Inspection_Completed__c.field-meta.xml
<CustomField>
    <fullName>Drawloop_Next_Inspection_Completed__c</fullName>
    <description>[DrawLoop]: Used in Outbound Message-JFS
DDP: Licensing Inspection Full Report and Summary Report (combined)
Delivery Option: SMTP - ODJFS Insp Completed</description>
    <formula>IF(CLQ_Program__r.RecordType.Name = &quot;Day Camp&quot;, &quot;SFCLQ_Inspection__c:&quot; &amp; Id &amp; &quot;;DDPId:a03r0000000xtE8;Deploy:a01r0000001UdPg&quot;, &quot;SFCLQ_Inspection__c:&quot; &amp; Id &amp; &quot;;DDPId:a03r0000000xtE8;Deploy:a01r0000001LWSa&quot;)</formula>
    <label>Drawloop_Next Inspection Completed JFS</label>
    <type>Text</type>
</CustomField>