force-app/main/default/objects/CLQ_Inspection__c/fields/Drawloop_Next_Inspection_Completed_ODE__c.field-meta.xml
<CustomField>
    <fullName>Drawloop_Next_Inspection_Completed_ODE__c</fullName>
    <description>Drawloop next field to send Licensing Inspection Summary report to the user for ODE only
DDP: Licensing Inspection Summary Report
Delivery Option: SMTP - ODE Insp Approved</description>
    <formula>IF(OR(CLQ_Program__r.RecordType.Name = &quot;Pre School&quot;,CLQ_Program__r.RecordType.Name = &quot;School Age Child Care&quot;) , &quot;SFCLQ_Inspection__c:&quot; &amp; Id &amp; &quot;;DDPId:a03r0000000xtER;Deploy:a01r0000001LWSH&quot;, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Drawloop Next Inspection Completed ODE</label>
    <type>Text</type>
</CustomField>