force-app/main/default/objects/CLQ_Inspection__c/fields/Drawloop_Next_Inspection_Revised__c.field-meta.xml
<CustomField>
    <fullName>Drawloop_Next_Inspection_Revised__c</fullName>
    <description>[DrawLoop]: Used in Outbound Messages
[Task 11630] DDP = Licensing Inspection Full Report ; Delivery = SMTP - Insp Revised</description>
    <formula>&quot;SFCLQ_Inspection__c:&quot; &amp; Id &amp; &quot;;DDPId:a03r0000000xtEP;Deploy:a0135000000kgnf&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Drawloop_Next_Inspection_Revised</label>
    <type>Text</type>
</CustomField>