force-app/main/default/objects/CLQ_Inspection__c/fields/Drawloop_Next_Inspection_Updated__c.field-meta.xml
<CustomField>
    <fullName>Drawloop_Next_Inspection_Updated__c</fullName>
    <description>[DrawLoop]: Used in Outbound Messages
[Task 11630] DDP = Licensing Inspection Full Report Deploy = SMTP - ODJFS Insp Updated &amp; SMTP - ODE Insp Updated</description>
    <formula>IF( OR(CLQ_Program__r.RecordType.Name = &quot;FCC - Type A Home&quot;,CLQ_Program__r.RecordType.Name = &quot;FCC - Type B Home&quot;,CLQ_Program__r.RecordType.Name = &quot;Child Care Center&quot;) , &quot;SFCLQ_Inspection__c:&quot; &amp; Id &amp; &quot;;DDPId:a0335000002RUf6;Deploy:a0135000000kgnP&quot;, IF( OR(CLQ_Program__r.RecordType.Name = &quot;Pre School&quot;,CLQ_Program__r.RecordType.Name = &quot;School Age Child Care&quot;) , &quot;SFCLQ_Inspection__c:&quot; &amp; Id &amp; &quot;;DDPId:a0335000002RUf6;Deploy:a0135000000kgnN&quot;, &quot;&quot;) )</formula>
    <label>DEL_Drawloop_Next Inspection Updated</label>
    <type>Text</type>
</CustomField>