force-app/main/default/objects/CLQ_Inspection__c/fields/Drawloop_Next_OnSite_Deferral__c.field-meta.xml
<CustomField>
    <fullName>Drawloop_Next_OnSite_Deferral__c</fullName>
    <description>[DrawLoop]: Used in Outbound Message
[Task 11630] DDP = SUTQ OnSite Verification Summary Report ; Delivery = SMTP - Deferral</description>
    <formula>&quot;SFCLQ_Inspection__c:&quot; &amp; Id &amp; &quot;;DDPId:a0335000002RUew;Deploy:a0135000000kgnd&quot;</formula>
    <label>Drawloop_Next OnSite Deferral</label>
    <type>Text</type>
</CustomField>