force-app/main/default/objects/CLQ_Inspection__c/fields/Drawloop_Next_OnSite_Rated__c.field-meta.xml
<CustomField>
    <fullName>Drawloop_Next_OnSite_Rated__c</fullName>
    <description>[DrawLoop]: Used in Outbound Messages
[Task 11630] DDP = SUTQ OnSite Verification Summary Report ; Delivery = SMTP - Rated &amp; SMTP - Rated 2</description>
    <formula>IF( ISPICKVAL( Onsite_Rating__c , &quot;2&quot;) , &quot;SFCLQ_Inspection__c:&quot; &amp; Id &amp; &quot;;DDPId:a0335000002RUew;Deploy:a0135000000kgmZ&quot;, &quot;SFCLQ_Inspection__c:&quot; &amp; Id &amp; &quot;;DDPId:a0335000002RUew;Deploy:a0135000000kgmb&quot;)</formula>
    <label>Drawloop_Next OnSite Rated</label>
    <type>Text</type>
</CustomField>