force-app/main/default/objects/CLQ_Inspection__c/fields/Drawloop_Next_TA_Revised_Inspection__c.field-meta.xml
<CustomField>
    <fullName>Drawloop_Next_TA_Revised_Inspection__c</fullName>
    <formula>&quot;SFCLQ_Inspection__c:&quot; &amp; Id &amp; &quot;;DDPId:a03r0000002wrf9;Deploy:a01r0000003NcZ0&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Drawloop_Next TA Revised Inspection</label>
    <type>Text</type>
</CustomField>