force-app/main/default/objects/CLQ_Inspection__c/fields/External_Notes__c.field-meta.xml
<CustomField>
    <fullName>External_Notes__c</fullName>
    <label>External Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>