force-app/main/default/objects/CLQ_Inspection__c/fields/F_CP_Domain_Points__c.field-meta.xml
<CustomField>
    <fullName>F_CP_Domain_Points__c</fullName>
    <label>F&amp;CP Domain Points</label>
    <length>10</length>
    <type>Text</type>
</CustomField>