force-app/main/default/objects/CLQ_Inspection__c/fields/Final_Approved_onsite_rating__c.field-meta.xml
<CustomField>
    <fullName>Final_Approved_onsite_rating__c</fullName>
    <label>Final Approved onsite rating</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>