force-app/main/default/objects/CLQ_Inspection__c/fields/Inspection_Comments__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Comments__c</fullName>
    <label>Inspection Comments</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>