force-app/main/default/objects/CLQ_Inspection__c/fields/Inspection_Complete__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Onsite Complete?</label>
    <type>Checkbox</type>
</CustomField>