force-app/main/default/objects/CLQ_Inspection__c/fields/Inspection_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Record_Type__c</fullName>
    <description>[6/6/2017]: Created to use in button script for CR# 11199.</description>
    <formula>RecordType.Name</formula>
    <label>Inspection Record Type</label>
    <type>Text</type>
</CustomField>