force-app/main/default/objects/CLQ_Inspection__c/fields/Inspection_Status__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Status__c</fullName>
    <label>Inspection Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Complete</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Withdraw</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Deferral</fullName>
            </value>
            <value>
                <fullName>Return for Revision</fullName>
            </value>
            <value>
                <fullName>System Deleted</fullName>
            </value>
            <value>
                <fullName>Resubmitted</fullName>
            </value>
            <value>
                <fullName>Pending Approval</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>