force-app/main/default/objects/CLQ_Inspection__c/fields/Is_inspection_Owner_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_inspection_Owner_Active__c</fullName>
    <formula>CLQ_Inspection_Owner__r.IsActive</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is inspection Owner Active</label>
    <type>Checkbox</type>
</CustomField>