force-app/main/default/objects/CLQ_Inspection__c/fields/IsApproved__c.field-meta.xml
<CustomField>
    <fullName>IsApproved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Inspection complete approval indicator</description>
    <label>Approved</label>
    <type>Checkbox</type>
</CustomField>