force-app/main/default/objects/CLQ_Inspection__c/fields/IsPending__c.field-meta.xml
<CustomField>
    <fullName>IsPending__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsPending</label>
    <type>Checkbox</type>
</CustomField>