force-app/main/default/objects/CLQ_Inspection__c/fields/Learning_And_Development_Domain_Points__c.field-meta.xml
<CustomField>
    <fullName>Learning_And_Development_Domain_Points__c</fullName>
    <label>L&amp;D Domain Points</label>
    <length>10</length>
    <type>Text</type>
</CustomField>