force-app/main/default/objects/CLQ_Inspection__c/fields/Max_Capacity_Under_2_1_2_Years__c.field-meta.xml
<CustomField>
    <fullName>Max_Capacity_Under_2_1_2_Years__c</fullName>
    <label>Max Capacity Under 2 1/2 Years</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>