force-app/main/default/objects/CLQ_Inspection__c/fields/NDL_Next_Complaint_Insp_Approved_CDC_Web__c.field-meta.xml
<CustomField>
    <fullName>NDL_Next_Complaint_Insp_Approved_CDC_Web__c</fullName>
    <description>(Forms/Reports) Drawloop next field for Inspection Complaint Full Report for Complaint record type for CDC Web purposes
Not in Use</description>
    <formula>&quot;SFCLQ_Inspection__c:&quot; &amp; Id &amp; &quot;;DDPId:a03r0000000nV3p;Deploy:a01r0000000k9ih&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NDL Next Complaint Insp Approved CDC Web</label>
    <type>Text</type>
</CustomField>