force-app/main/default/objects/CLQ_Inspection__c/fields/Onsite_SUTQ_Certificate__c.field-meta.xml
<CustomField>
    <fullName>Onsite_SUTQ_Certificate__c</fullName>
    <description>[Forms &amp; Reports]: Created to get criteria to print SUTQ Certificate</description>
    <formula>IF( OR( ISPICKVAL( Onsite_Rating__c , &quot;1&quot;) ,ISPICKVAL( Onsite_Rating__c , &quot;2&quot;),ISPICKVAL( Onsite_Rating__c , &quot;3&quot;),ISPICKVAL( Onsite_Rating__c , &quot;4&quot;),ISPICKVAL( Onsite_Rating__c , &quot;5&quot;)) ,  IF( CLQ_Program_Transaction__r.CLQ_Program__r.CLQ_Jurisdiction__c  = &quot;ODE&quot;, &quot;OnsiteODE&quot;, &quot;OnsiteJFS&quot;) , &quot;OnsiteNotRated&quot;)</formula>
    <label>Onsite SUTQ Certificate</label>
    <type>Text</type>
</CustomField>