force-app/main/default/objects/CLQ_Inspection__c/fields/Program_Jurisdiction__c.field-meta.xml
<CustomField>
    <fullName>Program_Jurisdiction__c</fullName>
    <formula>CLQ_Program__r.CLQ_Jurisdiction__c</formula>
    <label>Program Jurisdiction</label>
    <type>Text</type>
</CustomField>